[tool.poetry]
name = "molten"
version = "0.0.0"
description = ""
authors = ["Bogdan Popa <popa.bogdanp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
typing-extensions = "^3.6"

[tool.poetry.dev-dependencies]
bumpversion = "^0.5.3"
flake8 = "^3.5"
flake8-bugbear = "^18.2"
flake8-quotes = "^1.0"
gunicorn = "^19.8"
isort = "^4.3"
mypy = "^0.600.0"
pytest = "^3.5"
pytest-cov = "^2.5"
jinja2 = "^2.10"
toml = "^0.9.4"
