[tool.poetry]
name = "molten"
version = "0.0.2"
description = "An experimental web framework for Python 3.6+."
authors = ["Bogdan Popa <bogdan@cleartype.io>"]

[tool.poetry.dependencies]
python = "^3.6"
typing-extensions = "^3.6"

[tool.poetry.dev-dependencies]
alabaster = "^0.7.10"
bumpversion = "^0.5.3"
flake8 = "^3.5"
flake8-bugbear = "^18.2"
flake8-quotes = "^1.0"
gunicorn = "^19.8"
isort = "^4.3"
jinja2 = "^2.10"
mypy = "^0.600.0"
pytest = "^3.5"
pytest-cov = "^2.5"
sphinx = "^1.7"
sphinxcontrib-napoleon = "^0.6.1"
sphinxcontrib-versioning = "^2.2"
toml = "^0.9.4"
wsgicors = "^0.7.0"
sqlalchemy = "^1.2"
