[tool.poetry]
name = "molten"
version = "0.7.1"
readme = "README.md"
homepage = "https://moltenframework.com"
description = "A minimal, extensible, fast and productive API framework."
authors = ["Bogdan Popa <bogdan@cleartype.io>"]

[tool.poetry.dependencies]
python = "^3.6"
typing-extensions = "^3.6"
typing-inspect = "^0.3.1"

[tool.poetry.dev-dependencies]
alabaster = "^0.7.10"
bumpversion = "^0.5.3"
dramatiq = {version = "^1.3", extras = ["rabbitmq"]}
flake8 = "^3.5"
flake8-bugbear = "^18.2"
flake8-quotes = "^1.0"
gevent = "^1.3"
gunicorn = "^19.8"
isort = "^4.3"
jinja2 = "^2.10"
msgpack = "^0.5.6"
mypy = "^0.600.0"
prometheus-client = "^0.2.0"
pytest = "^3.5"
pytest-cov = "^2.5"
sphinx = "^1.7"
sphinxcontrib-napoleon = "^0.6.1"
sphinxcontrib-versioning = "^2.2"
sqlalchemy = "^1.2"
toml = "^0.9.4"
wsgicors = "^0.7.0"
